--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+4.6.3
+=====
+- Don't use g_object_set in the init function (bug #6110).
+- Translation updates (nn, nl, sv, kk, gl, sk, eu, sk, cs, zh_CN).
+
 4.6.2
 =====
 - Properly set orientation of tasklist handler (bug #5222).
