Check for running instance on startup, exit if there is one.

--- a/TODO
+++ b/TODO
@@ -1,6 +1,10 @@
 Things to do for Xfce Panel
 ===========================
 
+General
+-------
+ - Fix all the code with TODO in the comment.
+
 Libxfce4panel
 -------------
  - Add support for visibility.
@@ -13,6 +17,7 @@ Panel
  - Make struts applicaion wide, we can set one strut for
    each screen.
  - Support for remote plugins.
+ - Some issues with sensitivity and plugin dnd (cancel with escape).
 
 Plugins
 --------
