Add signal handler for SIGTERM and friends.

--- a/TODO
+++ b/TODO
@@ -1,6 +1,10 @@
 Things to do for Xfce Panel
 ===========================
 
+Pick From Trunk
+---------------
+ - Clock +1 px width
+
 General
 -------
  - Fix all the code with TODO in the comment.
