Update STATUS and TODO.

--- a/TODO
+++ b/TODO
@@ -3,23 +3,24 @@ Things to do for Xfce Panel
 
 Pick From Trunk
 ---------------
- - Clock +1 px width
+ - Clock +1 px width, bug 3960.
+ - DND to launcher, bug 3958.
 
 General
 -------
  - Fix all the code with TODO in the comment.
+ - Add some lines in README.
 
 Libxfce4panel
 -------------
  - Add support for visibility.
- - Plugin visibility support.
+ - Plugin visibility support (duno if this is possible tho).
  - Test the GObject plugin support.
 
 Panel
 -----
  - Stack panels on screen edges.
- - Make struts application wide, we can set one strut for
-   each screen.
+ - Make struts application wide, ie. set 1 strut for each screen.
  - Support for remote plugins.
 
 Plugins
