Small cleaups in the code.

--- a/TODO
+++ b/TODO
@@ -14,7 +14,7 @@ Libxfce4panel
 Panel
 -----
  - Stack panels on screen edges.
- - Make struts applicaion wide, we can set one strut for
+ - Make struts application wide, we can set one strut for
    each screen.
  - Support for remote plugins.
 
