Move provider signal to the interface + some other fixes.
 - Update TODO
 - Add provider_signal in the iface and use it in
   panel-plugin-external.c.
 - Direct call for provider_signal instead of
   g_signal_emit_by_name().

--- a/TODO
+++ b/TODO
@@ -27,4 +27,7 @@ Plugins
  - Possible support for a 'desktop file only' launcher, on plugin
    changes we edit the origional launcher (copy in
    ~/.local/share/applications/).
- - Transparent tray icons.
+ - Transparent tray icons (Fixed in Gtk+?).
+ - Option to 'disable' tray icons instead of hiding them.
+ - Use libnotify for systray notifications, currently the code is disabled.
+ 
