Add seprator plugin + some renames.

--- a/TODO
+++ b/TODO
@@ -28,5 +28,4 @@ Plugins
    ~/.local/share/applications/).
  - Transparent tray icons (Fixed in Gtk+?).
  - Option to 'disable' tray icons instead of hiding them.
- - Use libnotify for systray notifications, currently the code is disabled.
- 
+ - Use libnotify (dbus api?) for systray notifications, currently the code is disabled.
