Freeze autohide when the window is grabbed.

--- a/TODO
+++ b/TODO
@@ -19,13 +19,14 @@ Libxfce4panel
    or use all the available area.
  - Launcher and iconbox buttons with only icons so it looks nice with
    a transparant panel.
+ - Implement screen-position again.
 
 Panel
 -----
  - Stack panels on screen edges.
  - Support for remote plugins.
- - Block on grabbed (r29412).
  - Implement settings manager as socket to integrate with xfce4-settings.
+ - Make plugin positioning work.
 
 Systray
 -------
