Update the TODO again.

--- a/TODO
+++ b/TODO
@@ -26,7 +26,7 @@ Panel
  - Stack panels on screen edges.
  - Support for remote plugins.
  - Implement settings manager as socket to integrate with xfce4-settings.
- - Make plugin positioning work.
+ - Make panel positioning work in various kinds of monitor layouts.
 
 Systray
 -------
@@ -34,7 +34,3 @@ Systray
  - Option to 'disable' tray icons instead of hiding them.
  - Use libnotify (dbus api?) for systray notifications, currently the 
    code is disabled.
-
-Tasklist
---------
- - Option to span tasklist buttons across the entire available space.
