Add support for the old external plugin to the TODO.

--- a/TODO
+++ b/TODO
@@ -27,6 +27,8 @@ Panel
  - Support for remote plugins.
  - Implement settings manager as socket to integrate with xfce4-settings.
  - Make panel positioning work in various kinds of monitor layouts.
+ - Possibly add support for the old external plugins again, this won't
+   be easy since a lot of things changed in the backend.
 
 Systray
 -------
