Add menu plugin popup application to the TODO list.

--- a/TODO
+++ b/TODO
@@ -36,3 +36,7 @@ Systray
  - Option to 'disable' tray icons instead of hiding them.
  - Use libnotify (dbus api?) for systray notifications, currently the 
    code is disabled.
+
+Window Menu
+-----------
+ - Add a popup application again.
