--- a/po/ca.po
+++ b/po/ca.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.7.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-02-16 17:06+0100\n"
+"POT-Creation-Date: 2010-02-17 06:00+0100\n"
 "PO-Revision-Date: 2009-10-11 16:38+0100\n"
 "Last-Translator: Carles Muñoz Gorriz <carlesmu@internautas.org>\n"
 "Language-Team: catalan <xfce-i18n@xfce.org>\n"
@@ -18,97 +18,88 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-Language: Catalan\n"
-"X-Poedit-Country: ANDORRA\n"
 "X-Poedit-SourceCharset: utf-8\n"
+"X-Poedit-Country: ANDORRA\n"
 
 #: ../panel-desktop-handler.desktop.in.h:1
-#, fuzzy
 msgid "Create Launcher on Xfce Panel"
-msgstr "Quant al quadre Xfce"
+msgstr "Crear llençador al panell de Xfce"
 
 #: ../panel-desktop-handler.desktop.in.h:2
 msgid "Create a new launcher on the Xfce Panel"
-msgstr ""
+msgstr "Crear un nou llençador al panell de Xfce"
 
 #: ../panel-preferences.desktop.in.h:1
-#, fuzzy
 msgid "Customize the Xfce Panel"
-msgstr "Quant al quadre Xfce"
+msgstr "Personalitzar el panell de Xfce"
 
 #: ../panel-preferences.desktop.in.h:2
 msgid "Panel Preferences"
-msgstr ""
+msgstr "Preferències del panell"
 
 #. I18N: %s is the name of the plugin
 #: ../libxfce4panel/xfce-panel-plugin.c:829
 #: ../panel/panel-preferences-dialog.c:881
-#, fuzzy, c-format
+#, c-format
 msgid "Are you sure that you want to remove \"%s\"?"
-msgstr "Esteu segurs de voler suprimir l'espai de treball «%s»?"
+msgstr "Esteu segur de voler suprimir «%s»?"
 
 #: ../libxfce4panel/xfce-panel-plugin.c:834
 #: ../panel/panel-preferences-dialog.c:884
 msgid "If you remove the item from the panel, it is permanently lost."
-msgstr ""
+msgstr "Si suprimiu l'element del panell, es perdrà permanentment."
 
 #. move item
 #: ../libxfce4panel/xfce-panel-plugin.c:973
-#, fuzzy
 msgid "_Move"
-msgstr "Mou"
+msgstr "_Mou"
 
 #. add new items
 #: ../libxfce4panel/xfce-panel-plugin.c:1011 ../panel/panel-window.c:2066
-#, fuzzy
 msgid "Add _New Items..."
-msgstr "Afegeix elements nou…"
+msgstr "Afegir elements _nous…"
 
 #. customize panel
 #: ../libxfce4panel/xfce-panel-plugin.c:1022 ../panel/panel-window.c:2077
 msgid "Panel Pr_eferences..."
-msgstr ""
+msgstr "Pr_eferències del panell..."
 
 #. restart item
 #: ../libxfce4panel/xfce-panel-plugin.c:1046 ../panel/panel-window.c:2100
-#, fuzzy
 msgid "_Restart"
-msgstr "Reinicia"
+msgstr "_Reinicia"
 
 #: ../panel/main.c:75
-#, fuzzy
 msgid "Show the 'Panel Preferences' dialog"
-msgstr "Mostra el diàleg «Personalitza el quadre»"
+msgstr "Mostra el diàleg de \"Preferències del panell\""
 
 #: ../panel/main.c:75 ../panel/main.c:76
 msgid "PANEL-NUMBER"
-msgstr ""
+msgstr "PANEL-NUMBER"
 
 #: ../panel/main.c:76
-#, fuzzy
 msgid "Show the 'Add New Items' dialog"
-msgstr "Mostra el diàleg «Afegeix elements nous»"
+msgstr "Mostra el diàleg \"Afegir elements nous\""
 
 #: ../panel/main.c:77
 msgid "Save the panel configuration"
 msgstr "Desa la configuració del quadre"
 
 #: ../panel/main.c:78
-#, fuzzy
 msgid "Add a new plugin to the panel"
-msgstr "Afegeix un quadre nou"
+msgstr "Afegir un connector nou al panell"
 
 #: ../panel/main.c:78
 msgid "PLUGIN-NAME"
-msgstr ""
+msgstr "PLUGIN-NAME"
 
 #: ../panel/main.c:79
-#, fuzzy
 msgid "Restart the running panel instance"
-msgstr "Reinicia la instància de xfce4-panel que s'està executant"
+msgstr "Reinicia la instància del panell que s'està executant"
 
 #: ../panel/main.c:80
 msgid "Quit the running panel instance"
-msgstr ""
+msgstr "Sortir de la instància activa del panell"
 
 #: ../panel/main.c:81
 msgid "Print version information and exit"
@@ -117,12 +108,12 @@ msgstr "Mostra informació sobre la versió i surt"
 #. parse context options
 #: ../panel/main.c:149
 msgid "[ARGUMENTS...]"
-msgstr ""
+msgstr "[ARGUMENTS...]"
 
 #: ../panel/main.c:156
 #, c-format
 msgid "Type \"%s --help\" for usage."
-msgstr ""
+msgstr "Escriu \"%s --help\" per a obtenir ajuda."
 
 #: ../panel/main.c:171
 msgid "The Xfce development team. All rights reserved."
@@ -134,126 +125,109 @@ msgid "Please report bugs to <%s>."
 msgstr "Envieu els errors a <%s>."
 
 #: ../panel/main.c:218
-#, fuzzy
 msgid "There is already a running instance"
-msgstr "Ja hi ha un espai de notificació executant-se a la pantalla"
+msgstr "Ja hi ha una altra instància executant-se"
 
 #. spawn ourselfs again
 #: ../panel/main.c:258
-#, fuzzy
 msgid "Restarting..."
-msgstr "Reinicia"
+msgstr "Reiniciant..."
 
 #: ../panel/main.c:273
-#, fuzzy
 msgid "Failed to show the preferences dialog"
-msgstr "No s’ha pogut mostrar la pantalla"
+msgstr "No s'ha pogut mostrar el diàleg de preferències"
 
 #: ../panel/main.c:275
-#, fuzzy
 msgid "Failed to show the add new items dialog"
-msgstr "Mostra el diàleg «Afegeix elements nous»"
+msgstr "No s'ha pogut mostrar el diàleg per afegir elements"
 
 #: ../panel/main.c:277
-#, fuzzy
 msgid "Failed to save the panel configuration"
-msgstr "Desa la configuració del quadre"
+msgstr "No s'ha pogut desar la configuració del panell"
 
 #: ../panel/main.c:279
 msgid "Failed to add a plugin to the panel"
-msgstr ""
+msgstr "No s'ha pogut afegir un connector al panell"
 
 #: ../panel/main.c:281
-#, fuzzy
 msgid "Failed to restart the panel"
-msgstr "Afegeix elements al quadre"
+msgstr "No s'ha pogut reiniciar el panell"
 
 #: ../panel/main.c:283
-#, fuzzy
 msgid "Failed to quit the panel"
-msgstr "No s’ha pogut llançar «xfce4-panel -c»"
+msgstr "No s'ha pogut sortir del panell"
 
 #: ../panel/main.c:285
-#, fuzzy
 msgid "Failed to send D-Bus message"
-msgstr "No s’ha pogut mostrar la pantalla"
+msgstr "No s'ha pogut enviar un missatge a través de D-BUS"
 
 #. I18N: %s is replaced with xfce4-panel
 #: ../panel/main.c:292
 #, c-format
 msgid "No running instance of %s was found"
-msgstr ""
+msgstr "No s'ha trobat una instància en marxa de %s"
 
 #: ../panel/panel-application.c:193
 msgid "Failed to launch the migration application"
-msgstr ""
+msgstr "No s'ha pogut iniciar l'aplicació de migració"
 
 #: ../panel/panel-dbus-client.c:227
-msgid ""
-"Invalid plugin event syntax specified. Use PLUGIN-NAME:NAME[:TYPE:VALUE]."
-msgstr ""
+msgid "Invalid plugin event syntax specified. Use PLUGIN-NAME:NAME[:TYPE:VALUE]."
+msgstr "La sintaxis d'esdeveniments per al connector és invàlida. Useu PLUGIN-NAME:NAME[:TYPE:VALUE]."
 
 #: ../panel/panel-dbus-client.c:260
 #, c-format
-msgid ""
-"Invalid hint type \"%s\". Valid types are bool, double, int, string and uint."
-msgstr ""
+msgid "Invalid hint type \"%s\". Valid types are bool, double, int, string and uint."
+msgstr "Tipus invàlid \"%s\". Els tipus vàlids són: bool, double, int, string i uint."
 
 #: ../panel/panel-dialogs.c:57
 msgid "The panel of the Xfce Desktop Environment"
-msgstr ""
+msgstr "El panell per a l'entorn d'escriptori Xfce"
 
 #: ../panel/panel-dialogs.c:62
 msgid "translator-credits"
-msgstr ""
+msgstr "Harald Servat <redcrash@gmail.com>, 2010."
 
 #. setup the dialog
 #: ../panel/panel-dialogs.c:102 ../plugins/launcher/launcher-dialog.glade.h:1
-#, fuzzy
 msgid "Add New Item"
-msgstr "Afegeix elements nous"
+msgstr "Afegir un element nou"
 
 #: ../panel/panel-dialogs.c:116
 msgid "Please choose a panel for the new plugin:"
-msgstr ""
+msgstr "Trieu un panell per al nou connector"
 
 #. I18N: panel combo box in the preferences dialog
 #: ../panel/panel-dialogs.c:127 ../panel/panel-preferences-dialog.c:628
 #, c-format
 msgid "Panel %d"
-msgstr "Quadre %d"
+msgstr "Panell %d"
 
 #: ../panel/panel-dialogs.c:163
-msgid ""
-"Because the panel is running in kiosk mode, you are not allowed to make "
-"changes to the panel configuration as a regular user"
-msgstr ""
+msgid "Because the panel is running in kiosk mode, you are not allowed to make changes to the panel configuration as a regular user"
+msgstr "El panell està executant-se en mode Kiosk; no esteu permesos de canviar la configuració del panell."
 
 #: ../panel/panel-dialogs.c:165
 msgid "Modifying the panel is not allowed"
-msgstr ""
+msgstr "No es pot modificar el panell"
 
 #: ../panel/panel-dialogs.c:186
 #, c-format
 msgid "Plugin \"%s\" unexpectedly left the panel, do you want to restart it?"
-msgstr ""
+msgstr "El connector \"%s\" ha finalitzat inesperadament. Voleu reiniciar-lo?"
 
 #: ../panel/panel-dialogs.c:188
 #, c-format
-msgid ""
-"The plugin restarted more then once in the last %d seconds. If you press "
-"Execute the panel will try to restart the plugin otherwise it will be "
-"permanently removed from the panel."
-msgstr ""
+msgid "The plugin restarted more than once in the last %d seconds. If you press Execute the panel will try to restart the plugin otherwise it will be permanently removed from the panel."
+msgstr "El connector s'ha reiniciat més d'un cop en els darrers %d segons. Si premeu \"Executar\" el panell intentarà reiniciar el connector sinó serà eliminat permanentment del panell."
 
 #: ../panel/panel-item-dialog.c:173
 msgid "Add New Items"
 msgstr "Afegeix elements nous"
 
 #: ../panel/panel-item-dialog.c:175
-#, fuzzy
 msgid "Add new plugins to the panel"
-msgstr "Afegeix elements al quadre"
+msgstr "Afegir nous elements al panell"
 
 #: ../panel/panel-item-dialog.c:197
 #: ../plugins/launcher/launcher-dialog.glade.h:23
@@ -262,12 +236,11 @@ msgstr "_Cerca:"
 
 #: ../panel/panel-item-dialog.c:205
 msgid "Enter search phrase here"
-msgstr ""
+msgstr "Introduïu la frase a cercar aquí"
 
 #: ../panel/panel-item-dialog.c:310 ../panel/panel-preferences-dialog.c:281
-#, fuzzy
 msgid "Failed to open manual"
-msgstr "No s’ha pogut mostrar la pantalla"
+msgstr "No s'ha pogut obrir el manual"
 
 #: ../panel/panel-preferences-dialog.c:395
 msgid "Automatic"
@@ -277,48 +250,44 @@ msgstr "Automàtica"
 #: ../panel/panel-preferences-dialog.c:414
 #, c-format
 msgid "Screen %d"
-msgstr ""
+msgstr "Pantalla %d"
 
 #. I18N: monitor name in the output selector
 #: ../panel/panel-preferences-dialog.c:440
-#, fuzzy, c-format
+#, c-format
 msgid "Monitor %d"
-msgstr "Amplada dels monitors"
+msgstr "Monitor %d"
 
 #: ../panel/panel-preferences-dialog.c:689
-#, fuzzy
 msgid "The panel and plugin configurations will be permanently removed"
-msgstr "S'eliminarà el quadre seleccionat i tots els seus elements."
+msgstr "El panell i la configuració dels connectors seran eliminats permanentment."
 
 #: ../panel/panel-preferences-dialog.c:690
-#, fuzzy, c-format
+#, c-format
 msgid "Are you sure you want to remove panel %d?"
-msgstr "Esteu segurs de voler suprimir l'espai de treball %d?"
+msgstr "Esteu segurs que voleu eliminar el panell %d?"
 
 #. I18N: tooltip in preferences dialog when hovering an item in the list
 #: ../panel/panel-preferences-dialog.c:764
 #, c-format
 msgid "Internal name: %s-%d"
-msgstr ""
+msgstr "Nom intern: %s-%d"
 
 #: ../panel/panel-preferences-dialog.glade.h:1
-msgid ""
-"Alpha value of the panel background, between 0 (transparent) and 100 "
-"(opaque)."
-msgstr ""
+msgid "Alpha value of the panel background, between 0 (transparent) and 100 (opaque)."
+msgstr "Transparència del panell de fons, entre 0 (transparent) i 100 (opac)."
 
 #: ../panel/panel-preferences-dialog.glade.h:2
 msgid "Automatically show and _hide the panel"
-msgstr ""
+msgstr "Mostra i _oculta automàticament el panell"
 
 #: ../panel/panel-preferences-dialog.glade.h:3
 msgid "Background"
-msgstr ""
+msgstr "Fons"
 
 #: ../panel/panel-preferences-dialog.glade.h:4
-#, fuzzy
 msgid "C_ompositing"
-msgstr "Posició"
+msgstr "C_omposició"
 
 #: ../panel/panel-preferences-dialog.glade.h:5
 msgid "D_isplay"
@@ -343,72 +312,72 @@ msgstr "Afegir elements"
 msgid "L_ength (%):"
 msgstr ""
 
-#: ../panel/panel-preferences-dialog.glade.h:11
+#. I18N: name of the section (frame) in the panel preferences where the user
+#. can define the length and size of the panel
+#: ../panel/panel-preferences-dialog.glade.h:12
 msgid "Measurements"
 msgstr ""
 
-#: ../panel/panel-preferences-dialog.glade.h:12
+#: ../panel/panel-preferences-dialog.glade.h:13
 msgid "O_utput:"
 msgstr ""
 
-#: ../panel/panel-preferences-dialog.glade.h:13
+#: ../panel/panel-preferences-dialog.glade.h:14
 msgid "Select this option to extend the panel over multiple monitors."
 msgstr ""
 
-#: ../panel/panel-preferences-dialog.glade.h:14
-msgid ""
-"Select this option to hide the panel when the pointer is not above it. This "
-"only works when the panel is attached to a screen edge."
+#: ../panel/panel-preferences-dialog.glade.h:15
+msgid "Select this option to hide the panel when the pointer is not above it. This only works when the panel is attached to a screen edge."
 msgstr ""
 
-#: ../panel/panel-preferences-dialog.glade.h:15
+#: ../panel/panel-preferences-dialog.glade.h:16
 #, fuzzy
 msgid "Span mo_nitors"
 msgstr "Amplada dels monitors"
 
-#: ../panel/panel-preferences-dialog.glade.h:16
+#: ../panel/panel-preferences-dialog.glade.h:17
 #, fuzzy
 msgid "Transparency"
 msgstr "_Transparència (%):"
 
-#: ../panel/panel-preferences-dialog.glade.h:17
+#: ../panel/panel-preferences-dialog.glade.h:18
 msgid "Transparency when the pointer is hovering over the panel."
 msgstr ""
 
-#: ../panel/panel-preferences-dialog.glade.h:18
+#: ../panel/panel-preferences-dialog.glade.h:19
 msgid "Transparency when the pointer is not hovering the panel."
 msgstr ""
 
-#: ../panel/panel-preferences-dialog.glade.h:19
+#: ../panel/panel-preferences-dialog.glade.h:20
 msgid "Vertical"
 msgstr "Vertical "
 
-#: ../panel/panel-preferences-dialog.glade.h:20
+#: ../panel/panel-preferences-dialog.glade.h:21
 msgid "Xfce Panel"
 msgstr "Quadre Xfce"
 
-#: ../panel/panel-preferences-dialog.glade.h:21
+#: ../panel/panel-preferences-dialog.glade.h:22
 msgid "_Alpha:"
 msgstr ""
 
-#: ../panel/panel-preferences-dialog.glade.h:22
+#: ../panel/panel-preferences-dialog.glade.h:23
 msgid "_Enter:"
 msgstr ""
 
-#: ../panel/panel-preferences-dialog.glade.h:23
+#: ../panel/panel-preferences-dialog.glade.h:24
 #, fuzzy
 msgid "_Leave:"
 msgstr "_Nom:"
 
-#: ../panel/panel-preferences-dialog.glade.h:24
+#: ../panel/panel-preferences-dialog.glade.h:25
 msgid "_Lock panel"
 msgstr ""
 
-#: ../panel/panel-preferences-dialog.glade.h:25
+#: ../panel/panel-preferences-dialog.glade.h:26
 msgid "_Orientation:"
 msgstr "_Orientació:"
 
-#: ../panel/panel-preferences-dialog.glade.h:26
+#: ../panel/panel-preferences-dialog.glade.h:27
 msgid "_Size (pixels):"
 msgstr "_Mida (píxels):"
 
@@ -523,50 +492,48 @@ msgstr "Mostra _segons"
 msgid "F_ormat:"
 msgstr ""
 
-#: ../plugins/clock/clock-dialog.glade.h:10
+#. I18N: the fuzziness the *precision* of the fuzzy clock. Time steps of 5, 15
+#. or parts of the day.
+#: ../plugins/clock/clock-dialog.glade.h:11
 msgid "F_uzziness:"
 msgstr ""
 
-#: ../plugins/clock/clock-dialog.glade.h:11
+#: ../plugins/clock/clock-dialog.glade.h:12
 #, fuzzy
 msgid "Fl_ash time seperators"
 msgstr "Separador _espurnejant"
 
-#: ../plugins/clock/clock-dialog.glade.h:12
+#: ../plugins/clock/clock-dialog.glade.h:13
 msgid "Fuzzy"
 msgstr ""
 
-#: ../plugins/clock/clock-dialog.glade.h:13
+#: ../plugins/clock/clock-dialog.glade.h:14
 msgid "LCD"
 msgstr "LCD"
 
-#: ../plugins/clock/clock-dialog.glade.h:14
+#: ../plugins/clock/clock-dialog.glade.h:15
 msgid "Sho_w AM/PM"
 msgstr "_Mostra AM/PM"
 
-#: ../plugins/clock/clock-dialog.glade.h:15
+#: ../plugins/clock/clock-dialog.glade.h:16
 #: ../plugins/systray/systray-dialog.glade.h:5
 msgid "Show _frame"
 msgstr "Mostra _marc"
 
-#: ../plugins/clock/clock-dialog.glade.h:17
+#: ../plugins/clock/clock-dialog.glade.h:18
 #, no-c-format
-msgid ""
-"The format describes the date and time parts to insert into the file name. "
-"For example, %Y will be substituted with the year, %m with the month and %d "
-"with the day. See the documentation of the date utility for additional "
-"information."
+msgid "The format describes the date and time parts to insert into the file name. For example, %Y will be substituted with the year, %m with the month and %d with the day. See the documentation of the date utility for additional information."
 msgstr ""
 
-#: ../plugins/clock/clock-dialog.glade.h:18
+#: ../plugins/clock/clock-dialog.glade.h:19
 msgid "True _binary clock"
 msgstr "Rellotge _binari real"
 
-#: ../plugins/clock/clock-dialog.glade.h:19
+#: ../plugins/clock/clock-dialog.glade.h:20
 msgid "_Layout:"
 msgstr ""
 
-#: ../plugins/clock/clock-dialog.glade.h:20
+#: ../plugins/clock/clock-dialog.glade.h:21
 #, fuzzy
 msgid "_Tooltip format:"
 msgstr "Format del rètol emergent"
@@ -861,9 +828,7 @@ msgid "North"
 msgstr ""
 
 #: ../plugins/launcher/launcher-dialog.glade.h:16
-msgid ""
-"Select this option to disable the tooltips when moving over the panel button "
-"or menu items."
+msgid "Select this option to disable the tooltips when moving over the panel button or menu items."
 msgstr ""
 
 #: ../plugins/launcher/launcher-dialog.glade.h:17
@@ -1032,9 +997,7 @@ msgstr "No s’ha pogut controlar el gestor de selecció per la pantalla %d"
 
 #. create fake error and show it
 #: ../plugins/systray/systray.c:551
-msgid ""
-"Most likely another widget took over the function of a notification area. "
-"This plugin will close."
+msgid "Most likely another widget took over the function of a notification area. This plugin will close."
 msgstr ""
 
 #: ../plugins/systray/systray.c:554
